--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "About This Item",
+  "name": "about-this-item",
   "version": "",
   "description": "About this item module for app",
   "author": "Nicholas Mendini",
@@ -7,10 +7,20 @@
   "engines": {
     "node": ">=6.13.0"
   },
-  "scripts": {},
-  "dependencies": {},
+  "scripts": {
+    "start": "node server/server.js",
+    "server-dev": "nodemon server/server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mariadb": "^2.5.1",
+    "sequelize": "^6.3.5"
+  },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "faker": "^5.1.0"
+    "faker": "^5.1.0",
+    "nodemon": "^2.0.6"
   }
 }
