Resolved server / database connection issue. Added seed script to package.json. Implemented first function to seed Highlight table.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "server-dev": "nodemon server/server.js"
+    "server-dev": "nodemon server/server.js",
+    "seed": "node server/fakeData.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
