--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "node server/server.js",
     "server-dev": "nodemon server/server.js",
     "seed": "node server/fakeData.js"
@@ -22,6 +24,8 @@
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "faker": "^5.1.0",
-    "nodemon": "^2.0.6"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1"
   }
 }
