--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "description": "About this item module for app",
   "author": "Nicholas Mendini",
   "license": "",
+  "jest": {
+    "reporters": [
+      [
+        "jest-nyancat-reporter", {
+        "suppressErrorReporter": false
+        }
+      ]
+    ],
+    "testEnvironment": "node"
+  },
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "start": "node server/server.js",
-    "server-dev": "nodemon server/server.js",
+    "start": "node server/app.js",
+    "server-dev": "nodemon server/app.js",
     "seed": "node server/fakeData.js"
   },
   "dependencies": {
@@ -25,6 +35,7 @@
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "faker": "^5.1.0",
     "jest": "^26.6.3",
+    "jest-nyancat-reporter": "^2.0.0",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1"
   }
