--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "jest": {
     "reporters": [
       [
-        "jest-nyancat-reporter", {
-        "suppressErrorReporter": false
+        "jest-nyancat-reporter",
+        {
+          "suppressErrorReporter": false
         }
       ]
     ],
@@ -25,10 +26,13 @@
     "seed": "node server/fakeData.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mariadb": "^2.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
