--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "About this item module for app",
   "author": "Nicholas Mendini",
   "license": "",
+  "private": true,
   "jest": {
     "reporters": [
       [
@@ -22,6 +23,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "start": "node server/app.js",
+    "build": "webpack --mode=production",
+    "react-dev": "webpack --mode=development --watch",
     "server-dev": "nodemon server/app.js",
     "seed": "node server/fakeData.js"
   },
@@ -36,11 +39,17 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "babel-loader": "^8.2.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "faker": "^5.1.0",
     "jest": "^26.6.3",
     "jest-nyancat-reporter": "^2.0.0",
     "nodemon": "^2.0.6",
-    "supertest": "^6.0.1"
+    "supertest": "^6.0.1",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   }
 }
