--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "jest": {
     "reporters": [
       [
-        "jest-nyancat-reporter", {
-        "suppressErrorReporter": false
+        "jest-nyancat-reporter",
+        {
+          "suppressErrorReporter": false
         }
       ]
     ],
@@ -33,8 +34,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mariadb": "^2.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-moment": "^1.0.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
