Corrected database issue with proxy server

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,11 @@ coverage
 build/
 dist/
 
+# Bundles
+public/bundle.js
+public/bundle.js.map
+public/bundle.js.LICENSE.txt
+
 # Environment Variables
 .env
 
