Implemented additional features to make proxy easier.

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ dist/
 
 # Bundles
 public/bundle.js
-public/bundle.js.map
-public/bundle.js.LICENSE.txt
+# public/bundle.js.map
+# public/bundle.js.LICENSE.txt
 
 # Environment Variables
 .env
