--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "license": "",
   "private": true,
   "jest": {
+    "moduleNameMapper": {
+      "\\.css$": "identity-obj-proxy"
+    },
     "reporters": [
       "default"
     ],
@@ -59,6 +62,7 @@
     "enzyme-to-json": "^3.6.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "faker": "^5.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-mock-axios": "^4.2.1",
     "jest-nyancat-reporter": "^2.0.0",
