Updated test structure to handle CSS Modules differences. Updated gitignore to remove bundle.js

--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,13 @@ dist/
 
 # Bundles
 public/bundle.js
-# public/bundle.js.map
-# public/bundle.js.LICENSE.txt
+public/bundle.js.map
+public/bundle.js.LICENSE.txt
 
 # Environment Variables
 .env
 
 # Notes/Snippets
 snippets.json
+
+
