Testing coverage for all code is above 80%

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
       "\\.css$": "identity-obj-proxy"
     },
     "reporters": [
-      "default"
+      [
+        "jest-nyancat-reporter", {
+        "suppressErrorReporter": false
+        }
+      ]
     ],
     "testEnvironment": "node",
     "snapshotSerializers": [
