--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     },
     "reporters": [
       [
-        "jest-nyancat-reporter", {
-        "suppressErrorReporter": false
+        "jest-nyancat-reporter",
+        {
+          "suppressErrorReporter": false
         }
       ]
     ],
@@ -41,6 +42,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mariadb": "^2.5.1",
