--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mariadb": "^2.5.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
+    "mysql2": "^2.2.5",
     "react": "^16.0.1",
     "react-dom": "^16.0.1",
     "react-moment": "^1.0.0",
