created jsonDataGenerator.js file to create json data to write CSV

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-dev": "webpack --mode=development -d eval-source-map --watch",
     "server-dev": "nodemon server/app.js",
     "seed": "node server/fakeData.js",
-    "reset-psql": "psql postgres -U david_main -f db/postgres/postgresSchema.sql"
+    "reset-psql": "psql postgres -U david_main -f db/postgres/postgresSchema.sql",
+    "csv-generate": "node ./db/postgres/csv/dataGenerator.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
