--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "rules": {
         "linebreak-style": "off",
         "no-console": "off",
-        "no-plusplus": "off"
+        "no-plusplus": "off",
+        "object-curly-newline": "off"
     }
 }
