--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
   "dependencies": {
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "brotli-webpack-plugin": "^1.1.0",
     "compression": "^1.7.4",
+    "compression-webpack-plugin": "^7.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.1.0",
     "faker": "^5.1.0",
     "fast-csv": "^4.3.6",
     "mariadb": "^2.5.1",
